<?xml version="1.0" encoding="utf-8"?><!--
  ~ © 2016-present FlowCrypt a.s. Limitations apply. Contact human@flowcrypt.com
  ~ Contributors: DenBond7
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/radioGroupBackupsVariants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/email"
            android:textAllCaps="true"
            android:theme="@style/AppWidget.RadioButton" />

        <RadioButton
            android:id="@+id/radioButtonDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_medium"
            android:layout_weight="1"
            android:text="@string/download"
            android:textAllCaps="true"
            android:theme="@style/AppWidget.RadioButton" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonBackupAction"
        style="@style/AppWidget.Button.Green"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/default_margin_content"
        android:text="@string/backup_as_email"
        android:textAllCaps="true"
        android:theme="@style/AppWidget.Button.Green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupBackupsVariants" />

    <TextView
        android:id="@+id/textViewOptionsHint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_content"
        android:text="@string/backup_as_email_hint"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBackupAction" />

</androidx.constraintlayout.widget.ConstraintLayout>
