...
    <string name="feedback_thank_you_for_trying_message">Thank you for trying %1$s! We\'re here to help.</string>
    <string name="your_message">Your message</string>
    <string name="see_more_backup_options">See more backup options</string>
    <string name="there_are_no_backups_on_this_account"><b>There are no backups on this account</b>\n\n If you lose your device, or it stops working, your encrypted email will be unreadable.</string>
    <string name="email" translatable="false">Email</string>
    <string name="download">Download</string>
    <string name="backup_as_a_file">backup as a file</string>
    <string name="backup_as_email">backup as email</string>
    <string name="backup_as_download_hint">This will download your key(s) as a file. Very secure option if your device
        is encrypted, or if you can keep a file stored securely. If you lose both your device and the file, your encrypted email will be unreadable, so you need to keep this file in a safe place.</string>
    <string name="backup_as_email_hint">This will back up private key(s) in your Email Inbox. The security depends on
        the strength of your pass phrase, which should be very long and hard to guess. Best option for most users.</string>
    <string name="backups_found">Backups found: %1$d.\n\n Your account is backed up correctly in your Email Inbox.</string>
    <string name="your_key_backup">Your %1$s Backup</string>
    <string name="backed_up_successfully">Backed up successfully</string>
...
    <string name="reply">Reply</string>
    <string name="import_public_key">Import Public Key</string>
    <string name="private_">Private</string>
    <string name="public_">Public</string>
    <string name="attachment">Attachment</string>
    <string name="can_not_connect_to_the_server">Cannot connect to the server</string>
    <string name="cancel">Cancel</string>
    <string name="waiting_to_load">Waiting to load</string>
    <string name="download_complete">Download complete</string>
    <string name="template_attachment_already_loading">Attachment \"%1$s\" is already loading</string>
    <string name="can_not_attach_this_file">Can\'t attach this file!</string>
    <string name="template_warning_max_total_attachments_size">Total size of added attachments should be under
        %1$s</string>
...
    <string name="access_was_not_granted">Access was not granted</string>
    <string name="can_not_send_due_to_auth_failure">Can\'t send message: auth failure</string>
    <string name="mark_read">Mark read</string>
    <string name="selection_text">Selected: %1$d</string>
    <string name="marked_for_archiving">Marked for archiving</string>
    <string name="undo">Undo</string>
    <string name="network_error">Network error</string>
    <string name="error_no_keys">Error: no keys</string>
    <string name="could_not_load_private_keys">Couldn\'t load private keys</string>
    <string name="partially_encrypted_private_key_error_msg">Some of the provided Private Keys is a partially encrypted private key (some packets are encrypted, some not). Such keys are not supported and will be skipped. Please only import fully encrypted keys, with the same pass phrase for all secret packets.</string>
    <string name="file_is_too_big">The file is too big</string>
    <string name="source_is_empty_or_not_available">The source is empty or not available</string>
    <string name="parsing_keys_please_wait">Parsing keys, please wait</string>
...
