...
            android:hint="@string/e_mail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewAccountInfo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />
...
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />
...
            android:hint="@string/imap_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewIncomingEmailSettings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />
...
            android:hint="@string/imap_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutImapServer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextImapPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
...
            android:hint="@string/smtp_server"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewOutgoingEmailSettings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpServer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:inputType="textWebEmailAddress"
                android:maxLines="1"
                android:paddingTop="@dimen/default_margin_medium" />
...
            android:hint="@string/smtp_port"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSmtpServer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextSmtpPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:digits="0123456789"
                android:inputType="number"
                android:maxLength="5"
...
                android:hint="@string/smtp_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:inputType="textEmailSubject"
                    android:maxLines="1"
                    android:paddingTop="@dimen/default_margin_medium" />
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutSmtpUserName"
                app:passwordToggleContentDescription="description"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextSmtpPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:maxLines="1"
...

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/buttonTryToConnect"
            style="@style/AppWidget.Button"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/margin_top_load_account"
            android:text="@string/try_to_connect"
            android:theme="@style/AppWidget.Button.Green"
            app:layout_constraintHorizontal_bias="0.0"
...
